# ha-wiimote-bridge

./: .gitignore  CONTRIBUTING.md  DOCS.md  LICENSE  README.md  SECURITY.md  hacs.json  repository.yaml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: addon-ci.yml  addon-release.yml
blueprints/automation/: wiimote_common.yaml
docs/: architecture.md  firmware-setup.md  ha-addon-setup.md  protocol.md  release-checklist.md
esp32/: README.md
esp32/wiimote-serial-bridge/: wiimote-serial-bridge.ino
esp32/wiimote-serial-bridge/include/: buttons.h  messages.h  state.h
esp32/wiimote-serial-bridge/src/: buttons.cpp  messages.cpp
scripts/: run-gh-workflows-locally.sh
wiimote-bridge/: CHANGELOG.md  DOCS.md  Dockerfile  apparmor.txt  config.yaml  run.sh
wiimote-bridge/app/: main.py  pyproject.toml
wiimote-bridge/app/src/wiimote_bridge/: __init__.py  __main__.py
wiimote-bridge/app/src/wiimote_bridge/core/: handlers.py  run.py
wiimote-bridge/app/src/wiimote_bridge/transport/: mqtt_client.py  serial_reader.py
wiimote-bridge/app/src/wiimote_bridge/transport/mqtt/: connection.py  constants.py  discovery.py  errors.py  publish.py  types.py
wiimote-bridge/app/src/wiimote_bridge/utils/: config.py  logging.py  types.py
wiimote-bridge/app/tests/: conftest.py  test_config.py  test_entrypoints.py  test_handlers.py  test_logging.py  test_mqtt_client.py  test_runtime.py  test_serial_reader.py
wiimote-bridge/translations/: bg.yaml  cs.yaml  da.yaml  de.yaml  el.yaml  en.yaml  es.yaml  et.yaml  fi.yaml  fr.yaml  ga.yaml  hr.yaml  hu.yaml  it.yaml  lt.yaml  lv.yaml  mt.yaml  nl.yaml  pl.yaml  pt.yaml  ro.yaml  sk.yaml  sl.yaml  sv.yaml
