[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "wiimote-bridge"
version = "0.1.0"
description = "Wii Remote serial to MQTT bridge for Home Assistant"
requires-python = ">=3.11"
dependencies = [
  "pyserial==3.5",
  "paho-mqtt==1.6.1",
  "dynaconf==3.2.6",
]

[tool.setuptools.packages.find]
where = ["src"]
