[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "wiimote-bridge"
version = "0.4.0"
description = "Wii Remote serial to MQTT bridge for Home Assistant"
requires-python = ">=3.11"
dependencies = [
  "pyserial==3.5",
  "paho-mqtt==2.1.0",
  "dynaconf==3.2.12",
]

[dependency-groups]
dev = [
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wiimote_bridge"]

[tool.pytest.ini_options]
addopts = "--cov=wiimote_bridge --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
